--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^0.18.0",
+    "fastclick": "^1.0.6",
     "vant": "^1.6.9",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
