--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^0.18.0",
-    "fastclick": "^1.0.6",
-    "vant": "^1.6.9",
+    "vant": "^2.0.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -29,7 +28,7 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "lint-staged": "^8.1.4",
-    "postcss-pxtorem": "^4.0.1",
+    "postcss-plugin-px2rem": "^0.8.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "vue-template-compiler": "^2.5.21"
   },
@@ -41,5 +40,10 @@
       "vue-cli-service lint --fix",
       "git add"
     ]
-  }
+  },
+  "browserslist": [
+    "> 1% in CN",
+    "last 2 versions",
+    "not ie <= 9"
+  ]
 }
